@@ -1,5 +1,11 @@
 2007-09-11  Tobias C. Rittweiler  <tcr@freebits.de>
 
+	* swank-arglist.lisp (read-conversatively-for-autodoc): Also parse
+	quoted symbols explicitly. This fixed extended arglist display for
+	`(make-instance 'foo'. Reported by: Johannes Groedem.
+
+2007-09-11  Tobias C. Rittweiler  <tcr@freebits.de>
+
 	* slime-fancy.el: Require `slime-references'.
 	
 2007-09-10  Helmut Eller  <heller@common-lisp.net>
